# astl

./: .clang-format  .clang-tidy  CMakeLists.txt  astl_clion1.srctrlprj  astl_vs_code.code-workspace  compile_commands.json  main.cpp  slot_map.hpp  suppressions.txt
.clangd/index/: accumulate.hpp.46B92B884D824DC1.idx  adjacent_difference.hpp.1E163FC6AB7A38AA.idx  adjacent_find.hpp.ECDC0FBBFFC6D981.idx  algorithm.hpp.55196B339C671DEA.idx  all_of.hpp.41B8C187B2623836.idx  any_of.hpp.AB34AA7001F166BB.idx  binary_search.hpp.F7901BDEB3025352.idx  clamp.hpp.A38C5D2E727A1599.idx  compiler.hpp.C8998445F0193DF0.idx  concat_ranges.hpp.2A143BE1970E7F75.idx  copy.hpp.7F39D0B1CCCF4E0B.idx  count.hpp.C31BF8193BE7EC65.idx  count_iterator.hpp.59A3D62A138BDBB6.idx  destroy.hpp.B1A7514754C018CF.idx  dynamic_programing.hpp.3CFFA10C6D3E7347.idx  ebo_base.hpp.6D212807D4CA0713.idx  enumerate_range.hpp.073763B11BA24F2F.idx  equal.hpp.DCC79AFE00CD22EB.idx  equal_range.hpp.2B19128CB2EF4504.idx  erase_if.hpp.84D6607D77F83B75.idx  fill.hpp.B09C619E9F48BE81.idx  filter_iterator.hpp.DABDE4285F4EFAC6.idx  find.hpp.69C425EBD22D1FB1.idx  for_each.hpp.929E8A242E9B09C2.idx  functional.hpp.516D9D0E009D4154.idx  gather.hpp.15BF11F74C48F152.idx  heap.hpp.92A1187F772760CC.idx  inner_product.hpp.23B957F4A200A0AA.idx  inplace_merge.hpp.9493EEA019E0F81F.idx  iota.hpp.B14621E1B47DA909.idx  is_contained.hpp.EC23B91C3FCEE62F.idx  is_palindrome.hpp.F40A48032F202A19.idx  iterator.hpp.FECBAEFA0B936206.idx  iterator_adaptors.hpp.5F9FF0B424295998.idx  iterator_range.hpp.21EF05247613F7C9.idx  lexicographical_compare.hpp.5EB280B6107004D6.idx  lower_bound.hpp.891930BA168E0EAB.idx  main.cpp.60AE88C093762478.idx  map_iterator.hpp.F95471421E0383B8.idx  max.hpp.EDB4C5069D170C11.idx  (+37 more)
include/: function_ref.hpp
include/astl/: algorithm.hpp  concat_ranges.hpp  count_iterator.hpp  ebo_base.hpp  enumerate_range.hpp  filter_iterator.hpp  functional.hpp  iterator.hpp  iterator_adaptors.hpp  iterator_function_adaptors.hpp  iterator_range.hpp  map_iterator.hpp  memory.hpp  optional.hpp  pointee_iterator.hpp  pointer_iterator.hpp  range_access.hpp  ref_iter.hpp  temporary_buffer.hpp  utility.hpp  zip.hpp
include/astl/internal/: accumulate.hpp  adjacent_difference.hpp  adjacent_find.hpp  all_of.hpp  any_of.hpp  binary_search.hpp  clamp.hpp  compiler.hpp  copy.hpp  count.hpp  destroy.hpp  dynamic_programing.hpp  equal.hpp  equal_range.hpp  erase_if.hpp  fill.hpp  find.hpp  for_each.hpp  gather.hpp  heap.hpp  inner_product.hpp  inplace_merge.hpp  iota.hpp  is_contained.hpp  is_palindrome.hpp  lexicographical_compare.hpp  lower_bound.hpp  max.hpp  merge.hpp  min.hpp  minmax_element.hpp  mismatch.hpp  move.hpp  none_of.hpp  partial_sum.hpp  partition.hpp  permutation.hpp  permutation_combinations.hpp  reduce.hpp  remove.hpp  (+17 more)
